k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: taxicab-ENVIRONMENT-BUILD_NUMBER
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: taxicab
        version: "BUILD_NUMBER"
    spec:
      containers:
      - name: taxicab-ENVIRONMENT-BUILD_NUMBER
        image: /IMAGE
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
